# inference-engine

./: README.md  pyproject.toml
context_compiler/: __init__.py
context_compiler/ast/: __init__.py  nodes.py  prompt_node.py  resolvable_node.py  schema.py
context_compiler/compiler/: __init__.py  compiler.py  dependency_graph.py  passes.py
context_compiler/context/: __init__.py  context.py
context_compiler/examples/: simple_prompt.py
context_compiler/inference/: __init__.py  mock_provider.py  openai_provider.py  provider.py  strategy.py
context_compiler/query/: __init__.py  dependency_graph.py  passes.py  resolver.py
context_compiler/serialization/: __init__.py  diff.py  serializer.py
context_compiler/templates/: __init__.py  template.py
context_resolver/: __init__.py
context_resolver/ast/: __init__.py  nodes.py  paths.py  resolvable_node.py  schema.py
context_resolver/context/: __init__.py  context.py
context_resolver/examples/: __init__.py  little_house_in_the_eerie.py  local_llama_resolution.py  simple_prompt.py  simple_resolution.py
context_resolver/inference/: __init__.py  llama_cpp_provider.py  mock_provider.py  openai_provider.py  provider.py  strategy.py
context_resolver/query/: __init__.py  dependency_graph.py  passes.py  resolver.py
context_resolver/serialization/: __init__.py  diff.py  (+1 more)
tests/: __init__.py  test_context.py  test_dependency_graph.py  test_llama_cpp_provider.py  test_mock_provider.py  test_nodes.py  test_paths.py  test_prompt_node.py  test_resolvable_node.py  test_schema.py  test_serialization.py  test_templates.py
(+2 files in other folders)
